          the indexing of classes/roles, attributes.

          Since this is experimental, it's not enabled by default. To index
          subroutines, you'll have to add '--no-skip-sub-indexing' option during
          'lcpan update'.

        - Bump database schema version to 10 to support subroutine indexing and
          force reindexing of content/script/mention.

        [Enhancements]

        - New subcommands: sub, script2author, mod2author, dist2author.


0.77    2016-02-17 (PERLANCAR)

	- No functional changes.

	- [Bugfix] mods: fix Rinci argument specification for 'sort'.


0.76    2016-02-16 (PERLANCAR)

	- [Bugfix] dists: release name was shown instead of size in
	  rel_size result field.


0.75    2016-02-16 (PERLANCAR)

	- dists: Add options --sort, --rel-mtime-newer-than.


0.74    2016-02-16 (PERLANCAR)

        - Add subcommand: stats-last-index-time. This is a faster version of
          'stats' for App::lcpan::Call by only returning the result that is
          needed.

        - stats: Add total_filesize.

        - doc: Add option --html to open browser and show the HTML
          documentation.


0.73    2016-02-14 (PERLANCAR)

	- doc: Search .pod using content path to be able to show POD when
	  there is no package declaration in the .pod.


0.72    2016-02-14 (PERLANCAR)

        - [Bugfix] doc: Fix SQL error when name contains /\.(pod|pm)$/.

        - mods: Add result field rel_mtime.

        - rels: Add option --no-path.


0.71    2016-02-12 (PERLANCAR)

	- No functional changes.

	- 2nd attempt to workaround PAUSE indexer mistakenly detects a
	  package declaration.


0.70    2016-02-12 (PERLANCAR)

	- No functional changes.

	- Workaround package declaration false positive from PAUSE indexer.


0.69    2016-02-12 (PERLANCAR)

        - Bump database schema version to v9 (add index for 'package' field in
          'content' table).

        - New subcommands: doc, script2mod, copy-script, extract-script,